RESOLVED FIXED32590
CrashTracer: [USER] 1 crash in Safari at com.apple.WebCore: WebCore::endsOfNodeAreVisuallyDistinctPositions + 115
https://bugs.webkit.org/show_bug.cgi?id=32590
Summary CrashTracer: [USER] 1 crash in Safari at com.apple.WebCore: WebCore::endsOfNo...
Enrica Casucci
Reported 2009-12-15 17:44:06 PST
Created attachment 44928 [details] Repro case * STEPS TO REPRODUCE Load the attached repro case. Right click on the button.
Attachments
Repro case (2.37 KB, text/html)
2009-12-15 17:44 PST, Enrica Casucci
no flags
Patch (5.52 KB, patch)
2009-12-15 18:04 PST, Enrica Casucci
adele: review+
Enrica Casucci
Comment 1 2009-12-15 18:04:12 PST
WebKit Review Bot
Comment 2 2009-12-15 18:05:30 PST
style-queue ran check-webkit-style on attachment 44931 [details] without any errors.
Adele Peterson
Comment 3 2009-12-15 18:47:09 PST
Comment on attachment 44931 [details] Patch The fix looks good to me. You should add a newline at the end of your test. Also, can the test be reduced further? All the inline style might not be needed to reproduce the problem.
Enrica Casucci
Comment 4 2009-12-16 09:57:27 PST
(In reply to comment #3) > (From update of attachment 44931 [details]) > The fix looks good to me. You should add a newline at the end of your test. > Also, can the test be reduced further? All the inline style might not be > needed to reproduce the problem. I've added the newline. I tried to remove the style, but the bug doesn't repro.
Enrica Casucci
Comment 5 2009-12-16 10:01:00 PST
Committed revision 52201.
Note You need to log in before you can comment on or make changes to this bug.