CrashTracer: [USER] 1 crash in Safari at com.apple.WebCore: WebCore::endsOfNodeAreVisuallyDistinctPositions + 115 <rdar://problem/7467108> https://bugs.webkit.org/show_bug.cgi?id=32590

Reviewed by Adele Peterson.

WebCore:

If the element is a button there is no need to look at the children to calculate the caret position.

Test: editing/selection/button-right-click.html

* dom/Position.cpp:
(WebCore::Position::getInlineBoxAndOffset): Avoid calling recursively this method,
when starting from a button element.

LayoutTests:

* editing/selection/button-right-click-expected.txt: Added.
* editing/selection/button-right-click.html: Added.



Canonical link: https://commits.webkit.org/43625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52201 268f45cc-cd09-0410-ab3c-d52691b4dbfc